<resources>
    <string name="app_name">Quiz</string>
    <string name="name_quiz">Quiz HG</string>
    <string name="materi">Materi</string>
    <string name="result">Result</string>
    <string name="selamat">Selamat</string>
    <string name="score">Score</string>
    <string name="point">Point</string>
    <string name="next">Next</string>
    <string name="lanjut">Lanjut</string>
    <string name="soal_1_30">Soal 1/30</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a elit nisl. Morbi sed felis convallis, commodo urna sagittis, ornare tortor. Etiam a feugiat quam.</string>
    <string name="todo">TODO</string>
    <string name="nomor">Nomor</string>
    <string name="name">Name</string>
    <string name="login_google">Login Google</string>
    <string name="log_out">Log Out</string>
    <string name="peringkat">Peringkat</string>
    <string name="percobaan">Percobaan</string>
    <string name="tanggal">Tanggal</string>
    <string name="benar">Benar</string>
    <string name="salah">Salah</string>
    <string name="check_jawaban">Check Jawaban</string>
    <string name="answers">Answers</string>
    <string name="dengan_timer">Dengan Timer</string>
    <string name="_15_menit">15 Menit</string>
    <string name="_30_menit">30 Menit</string>
    <string name="_60_menit">60 Menit</string>
    <string name="tanpa_timer">Tanpa Timer</string>
    <string name="timer">Timer</string>
    <string name="biografi">Biografi</string>
    <string name="title_activity_biografi">BiografiActivity</string>
    <string name="biografi_saya">Biografi Saya</string>
    <string name="text01_bio">Nama saya Lusi Lamria Samosir, seorang mahasiswa Program Studi Pendidikan Kimia Bilingual angkatan 2015 Fakultas Matematika dan Ilmu Pengetahuan Alam, Universitas Negeri Medan (UNIMED). Saya lahir di Desa Pagar Batu, Kec. Balige Kab. Toba Samosir pada tanggal 08 Agustus 1997. Riwayat pendidikan yang saya tempuh hingga saat ini adalah menempuh pendidikan sekolah dasar di SD N 176367 Soposurung (2003), sekolah menengah pertama di SMP N 4 Balige (2009), sekolah menengah atas di SMA N 1 Balige (2012), dan saat ini sedang menempuh pendidikan S1 di Universitas Negeri Medan (UNIMED) (2015). </string>
    <string name="text02_bio">Tujuan saya dalam membuat LKS Berbasis Android ini adalah untuk meningkatkan motivasi dan hasil belajar siswa dalam pembelajaran kimia khususnya pada topik hidrolisis garam, dan dengan adanya LKS Berbasis Android ini siswa mampu bekerja mandiri kapan pun dan dimana pun. </string>
    <string name="terimakasih">Sekian data singkat mengenai saya. Terimakasih</string>
    <string name="lihat_score">Lihat Score</string>
</resources>
