<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BiografiActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_biografi"/>

    <TextView
        android:padding="10dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/biografi_saya"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/text01_bio"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/text02_bio"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/terimakasih"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>