<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.StartQuizActivity">

    <include
        android:id="@+id/toolbar_start_quiz"
        layout="@layout/toolbar"
        />

    <TextView
        android:id="@+id/txt_dengan"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_below="@id/toolbar_start_quiz"
        android:layout_centerHorizontal="true"
        android:text="@string/dengan_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_15"
        android:text="@string/_15_menit"
        android:layout_marginTop="10dp"
        android:textColor="@color/btn_color"
        android:layout_below="@id/txt_dengan"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_30"
        android:text="@string/_30_menit"
        android:layout_marginTop="10dp"
        android:textColor="@color/btn_color"
        android:layout_below="@id/btn_15"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_60"
        android:text="@string/_60_menit"
        android:layout_marginTop="10dp"
        android:textColor="@color/btn_color"
        android:layout_below="@id/btn_30"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_tanpa"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_below="@id/btn_60"
        android:layout_centerHorizontal="true"
        android:text="@string/tanpa_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_next"
        android:text="@string/lanjut"
        android:layout_marginTop="10dp"
        android:textColor="@color/btn_color"
        android:layout_below="@id/txt_tanpa"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>