<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar"
        />

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btn_materi"
            android:text="@string/materi"
            android:textColor="@color/btn_color"
            android:background="@drawable/button_style"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_quiz"
            android:layout_below="@id/btn_materi"
            android:text="@string/app_name"
            android:textColor="@color/btn_color"
            android:textSize="22sp"
            android:background="@drawable/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"
            />

        <Button
            android:id="@+id/btn_score"
            android:layout_below="@id/btn_quiz"
            android:text="@string/score"
            android:textColor="@color/btn_color"
            android:textSize="22sp"
            android:background="@drawable/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"
            />

        <Button
            android:id="@+id/btn_result"
            android:layout_below="@id/btn_score"
            android:text="@string/result"
            android:textColor="@color/btn_color"
            android:textSize="22sp"
            android:background="@drawable/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"
            />

        <Button
            android:id="@+id/btn_biografi"
            android:layout_below="@id/btn_result"
            android:text="@string/biografi"
            android:textColor="@color/btn_color"
            android:textSize="22sp"
            android:background="@drawable/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"
            />

        <Button
            android:id="@+id/btn_logout"
            android:layout_below="@id/btn_biografi"
            android:text="@string/log_out"
            android:textColor="@color/btn_color"
            android:textSize="22sp"
            android:background="@drawable/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"
            />

    </RelativeLayout>

</RelativeLayout>