<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResultActivity">

    <include
        android:id="@+id/toolbar_result"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_below="@id/toolbar_result"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_percobaan"
            android:textStyle="bold"
            android:text="@string/percobaan"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_tanggal"
            android:textStyle="bold"
            android:text="@string/tanggal"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_alignParentEnd="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_benar"
                android:textStyle="bold"
                android:text="@string/benar"
                android:textAlignment="center"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_salah"
                android:textStyle="bold"
                android:text="@string/salah"
                android:textAlignment="center"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/lv_result"
        android:padding="10dp"
        android:layout_below="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</RelativeLayout>