<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.HasilActivity">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@color/white"
        tools:ignore="UselessLeaf,UselessParent">

        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txt_selamat"
                android:text="@string/selamat"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_score"
                android:text="@string/score"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txt_selamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_point"
                android:text="@string/point"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txt_score"
                android:textColor="@color/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_next"
                android:text="@string/next"
                android:textColor="@color/btn_color"
                android:background="@drawable/button_style"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txt_point"
                android:layout_marginTop="25dp"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>