<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ScoreActivity">

    <include
        android:id="@+id/toolbar_score"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/header"
        android:padding="10dp"
        android:layout_below="@id/toolbar_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_nomor"
            android:text="@string/peringkat"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_nama"
            android:text="@string/name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_score"
            android:text="@string/score"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ListView
        android:padding="10dp"
        android:layout_below="@id/header"
        android:id="@+id/lv_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</RelativeLayout>