<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.QuizActivity">

    <include
        android:id="@+id/toolbar_quiz"
        layout="@layout/toolbar"
        />

    <RelativeLayout
        android:layout_below="@id/toolbar_quiz"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_nomor"
            android:text="@string/soal_1_30"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_soal"
            android:layout_below="@id/txt_nomor"
            android:padding="2dp"
            android:text="@string/lorem"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/rg"
            android:padding="5dp"
            android:layout_below="@id/txt_soal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rb_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rb_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rb_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rb_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_lanjut"
            android:text="@string/lanjut"
            android:textAllCaps="false"
            android:background="@drawable/button_style"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>